--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
