--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "nodemon lib/server.js  --ignore src/",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
