--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "scripts": {
     "client": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "nodemon lib/server.js  --ignore src/",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start:development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
   },
   "proxy": "http://localhost:8080",
