--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eject": "react-scripts eject",
     "server": "nodemon lib/server.js  --ignore src/",
     "start:development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\""
+    "start:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
+    "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build"
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
