--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "nodemon lib/server.js  --ignore src/",
-    "start:development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
-    "heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "npm install && npm install && npm run build"
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
