--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "nodemon lib/server.js  --ignore src/",
+    "server": "node lib/server.js  --ignore src/",
     "heroku-postbuild": "npm install && npm install && npm run build"
   },
   "proxy": "http://localhost:8080",
