--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "react-express-boilerplate",
+  "name": "full-stack-app",
+  "author": "Tracy Su",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cross-env": "^5.2.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
-    "nodemon": "^1.18.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
     "client": "react-scripts start",
-    "start": "react-scripts start",
+    "start:production": "cross-env NODE_ENV=production node server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "nodemon lib/server.js  --ignore src/",
-    "run:development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "run:production": "concurrently --kill-others-on-fail \"npm run server\" \"npm run build\"",
+    "server": "cross-env NODE_ENV=development nodemon server",
+    "app-dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "app-prod": "npm run build && cross-env NODE_ENV=production node server",
     "heroku-postbuild": "npm install && npm run build"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:5000",
   "devDependencies": {
-    "concurrently": "^3.5.1"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.9"
   }
 }
