--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
-    "express": "^4.16.2",
+    "express": "^4.16.4",
+    "express-mailer": "^0.3.1",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "react": "^16.2.0",
