--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "mongoose": "^5.0.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^2.1.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
