--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "express-mailer": "^0.3.1",
-    "jade": "^1.11.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
+    "nodemailer": "^5.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^2.1.3",
@@ -36,5 +35,11 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.9"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
