--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
+    "googleapis": "^36.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "nodemailer": "^5.1.1",
