--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^5.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loader": "^2.4.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
