--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Tracy Su",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/fwgs210/full-stack-app",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
@@ -11,17 +12,14 @@
     "@material-ui/core": "^3.9.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "compression": "^1.7.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
-    "fs": "0.0.1-security",
     "googleapis": "^36.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "nodemailer": "^5.1.1",
-    "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loader": "^2.4.5",
