--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loader": "^2.4.5",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
