--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "app-dev": "razzle start",
+    "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
+    "prestart:prod": "yarn build",
     "start:prod": "cross-env NODE_ENV=production node build/server.js",
-    "heroku-postbuild": "npm install && npm run build"
+    "deploy": "git push heroku master"
   },
   "proxy": "http://localhost:5000",
   "browserslist": [
