--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^3.9.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
@@ -18,9 +19,9 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "nodemailer": "^5.1.1",
-    "razzle": "2.4.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-loader": "^2.4.5",
     "react-placeholder": "^3.0.1",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
@@ -31,14 +32,21 @@
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "start": "razzle start",
-    "build": "razzle build",
-    "test": "razzle test --env=jsdom",
-    "prestart:prod": "yarn build",
-    "start:prod": "cross-env NODE_ENV=production node build/server.js",
-    "deploy": "git push heroku master"
+    "client": "react-scripts start",
+    "start:production": "cross-env NODE_ENV=production node server",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "server": "cross-env NODE_ENV=development nodemon server",
+    "app-dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "app-prod": "npm run build && cross-env NODE_ENV=production node server",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.9"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
