--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^36.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
+    "next": "^7.0.2",
     "nodemailer": "^5.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -32,13 +33,13 @@
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "client": "react-scripts start",
+    "dev": "next",
+    "build": "next build",
+    "client": "next start",
     "start:production": "cross-env NODE_ENV=production node server",
-    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "cross-env NODE_ENV=development nodemon server",
-    "app-dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "app-dev": "cross-env NODE_ENV=development nodemon server",
     "app-prod": "npm run build && cross-env NODE_ENV=production node server",
     "heroku-postbuild": "npm install && npm run build"
   },
