--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "next": "^7.0.2",
-    "nodemailer": "^5.1.1",
+    "postmark": "^2.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.0",
