--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.2",
     "express-sslify": "^1.2.0",
     "googleapis": "^36.0.0",
+    "immutable": "^4.0.0-rc.12",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.0.8",
     "next": "^7.0.2",
@@ -27,6 +28,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
